--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,13 +4,14 @@
 
 body {
   margin: 0;
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: times, "Roboto Condensed" sans-serif;
+  height: 100vh;
 }
 
 header {
   background-color: rgb(242, 241, 241);
 }
-.container {
+.header-container {
   display: flex;
   height: 10em;
   justify-content: space-between;
@@ -19,7 +20,7 @@ header {
   .logo {
     margin: 10px;
   }
-  .links {
+  .header-links {
     display: flex;
     width: 50%;
     justify-content: flex-end;
@@ -28,9 +29,48 @@ header {
       color: grey;
       text-decoration: none;
       margin: 2%;
+      align-items: center;
       &:active {
         color: rgb(95, 95, 95);
       }
     }
+  }
+}
+
+footer {
+  background-color: #343a40;
+  color: white;
+  height: 15em;
+}
+
+.footer-container {
+  display: flex;
+
+  justify-content: center;
+  margin: 0 5%;
+  .footer-links {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+    margin-top: 1%;
+
+    &-a {
+      margin: 2%;
+      &:visited {
+        color: rgb(62, 62, 223);
+      }
+      &:active {
+        color: rgb(95, 95, 95);
+      }
+    }
+  }
+}
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5%;
+  p {
+    margin: 0;
   }
 }
