--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,10 +2,15 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
 body {
   margin: 0;
-  font-family: times, "Roboto Condensed" sans-serif;
-  height: 100vh;
+  font-family: "Roboto Condensed", sans-serif;
+  min-height: 100vh;
 }
 
 header {
@@ -37,7 +42,33 @@ header {
   }
 }
 
+main {
+  margin: 0 10%;
+  .counter {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.info-container {
+  display: flex;
+  
+  &-open {
+      margin-right: 10%;
+  }
+  &-book {
+    margin-right: 10%;
+  }
+  &-address {
+  }
+}
+
 footer {
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  background: grey;
   background-color: #343a40;
   color: white;
   height: 15em;
@@ -50,8 +81,8 @@ footer {
   margin: 0 5%;
   .footer-links {
     display: flex;
-    justify-content: space-around;
-    width: 30%;
+    justify-content: center;
+    width: 60%;
     margin-top: 1%;
 
     &-a {
@@ -69,7 +100,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5%;
+  margin-top: 40px;
   p {
     margin: 0;
   }
