--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,16 +20,31 @@ header {
   display: flex;
   height: 10em;
   justify-content: space-between;
-  margin: 0 10%;
+  margin: 0 20%;
 
-  .logo {
+  @media (max-width: 740px) {
+    flex-direction: column;
+    height: 20em;
+    margin: 0%;
+  }
+
+  .header-logo {
     margin: 10px;
+    @media (max-width: 740px) {
+    }
   }
   .header-links {
     display: flex;
     width: 50%;
     justify-content: flex-end;
     align-items: center;
+    @media (max-width: 740px) {
+      margin: 10px 0;
+      justify-content: space-around;
+      align-content: center;
+      font-size: 4vw;
+      width: 100%;
+    }
     a {
       color: grey;
       text-decoration: none;
@@ -43,28 +58,50 @@ header {
 }
 
 main {
-  margin: 0 10%;
-  .counter {
-    max-width: 100%;
-    height: auto;
+  margin: 0 20%;
+  @media (max-width: 740px) {
+    margin: 5%;
   }
-}
+    h1 {
+      text-transform: uppercase;
+      font-size: 3rem;
+      font-weight: 300;
+    }
+    h2 {
+      text-transform: uppercase;
+      font-size: 2.5rem;
+      font-weight: 200;
+    }
+    h3 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      font-weight: 200;
+    }
+    .counter {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
 
 .info-container {
   display: flex;
 
   &-open {
-    margin-right: 10%;
+    margin-right: 17%;
   }
   &-book {
-    margin-right: 10%;
+    margin-right: 17%;
   }
   &-address {
+  }
+  @media (max-width: 740px) {
+    display: flex;
+    flex-direction: column;
   }
 }
 
 footer {
-
   margin-top: auto;
   padding: 5px 5px 0px 5px;
   bottom: 0;
@@ -83,8 +120,12 @@ footer {
     display: flex;
     justify-content: center;
     width: 60%;
-    // margin-top: 1%;
 
+    // margin-top: 1%;
+    @media (max-width: 740px){
+        width: 100%;
+        justify-content: space-between;
+    }
     &-a {
       margin: 20px 10px 25px;
       &:visited {
