--- a/src/scss/story.scss
+++ b/src/scss/story.scss
@@ -2,20 +2,15 @@
   box-sizing: border-box;
 }
 
-html {
-  display: flex;
-  flex-direction: column;
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
-
 body {
   margin: 0;
-  padding: 0;
   font-family: "Roboto Condensed", sans-serif;
-  min-height: 100vh;
-}
-.page-container {
-  position: relative;
-  min-height: 100vh;
+  min-height: 130vh;
 }
 
 header {
@@ -25,9 +20,15 @@ header {
   display: flex;
   height: 10em;
   justify-content: space-between;
-  margin: 0 10%;
+  margin: 0 20%;
 
-  .logo {
+  @media (max-width: 740px) {
+    flex-direction: column;
+    height: 20em;
+    margin: 0%;
+  }
+
+  .header-logo {
     margin: 10px;
   }
   .header-links {
@@ -35,6 +36,13 @@ header {
     width: 50%;
     justify-content: flex-end;
     align-items: center;
+    @media (max-width: 740px) {
+      margin: 10px 0;
+      justify-content: space-around;
+      align-content: center;
+      font-size: 4vw;
+      width: 100%;
+    }
     a {
       color: grey;
       text-decoration: none;
@@ -48,9 +56,9 @@ header {
 }
 
 main {
+  margin: 0 10%;
   padding-bottom: 2.5rem;
   text-align: center;
-  
 }
 footer {
   position: absolute;
